chamber discover page - fixed alignment of h1

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -345,7 +345,7 @@ nav.menuLinks ul li a {
 
 .overlay-text h1 {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
